section one is done

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
             <button class="sign-btn">Stay Focused</button>
         </div>
     </nav>
+    <main>
+        <section class="section-1">
+             <div>
+                <h2 class="sec-1-title">See It in Action</h2>
+                <p class="sec-1-des">Explore the live preview and imagine your <br> brand in this bold new look</p>
+                <button class="sign-btn">Launch Live Preview</button>
+            </div>
+            <img src="./Assets/wc-mini.png" alt="">
+        </section>
+    </main>
 </body>
 </html>
