section-2 is done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
             </div>
             <img src="./Assets/wc-mini.png" alt="">
         </section>
+
+        <section class="sec-2-container">
+            <h1 class="sec-2-title">Joined Thousand of Productive Users</h1>
+            <div class="sec-2-content">
+                <div>
+                    <h1 class="sec-2-num">50K</h1>
+                      <p>Active Users</p>
+                </div>
+                <div>
+                    <h1 class="sec-2-num">2M+</h1>
+                     <p>Focused Sessions</p>
+                </div>
+                <div>
+                    <h1 class="sec-2-num">95%
+                       
+                    </h1>
+                     <p>Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
