--- a/index.html
+++ b/index.html
@@ -122,5 +122,15 @@
             </div>
         </section>
     </main>
+    
+    <footer>
+        <div class="footer-container">
+            <h1 class="primary-color logo">LOGO</h1>
+            <p>Ready to elevate your online presence?Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="footer-links">
+                <a href="">Home</a><a href="">About</a><a href="">How it works</a><a href="">Services</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
