btn related issues solved

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <input type="text" name="" id="name" placeholder="fullname"><br>   
                     <label for="name">Message</label> <br>                 
                     <input type="text" name="" id="message" placeholder="write your message..."><br> 
-                    <button class="form-btn">Get in Touch</button>                   
+                    <input type="submit" value="Get in Touch" class="form-btn">                 
 
                 </form>
             </div>
